fix: align

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,7 +26,6 @@ body {
 .basic-layout .content {
   margin-left: auto;
   margin-right: auto;
-  align-content: center;
   width: 100%;
   max-width: var(--layout-width);
 }
